--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/testdb?serverTimez
 spring.datasource.hikari.username=root
 spring.datasource.hikari.password=dbwls96
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
+
+
+#Spring MVC
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
