--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,10 @@
 plugins {
 	id 'java'
-	//id 'org.springframework.boot' version '3.3.1'
-	id 'org.springframework.boot' version '2.7.13'
-	//id 'io.spring.dependency-management' version '1.1.5'
-	id 'io.spring.dependency-management' version '1.1.4'
+	id 'org.springframework.boot' version '3.3.1'
+	id 'io.spring.dependency-management' version '1.1.5'
 }
 
-group = 'com.jjobkorea'
+group = 'com.boot'
 version = '0.0.1-SNAPSHOT'
 
 java {
@@ -26,22 +24,22 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	implementation 'javax.servlet:jstl:1.2'
-	implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.20'
-	//implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.1'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4.1:1.16'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation 'mysql:mysql-connector-java:8.0.29'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.3'
-	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	
+	 implementation 'org.apache.tomcat.embed:tomcat-embed-jasper' // JSP 관련 종속성
+	 implementation 'jakarta.servlet:jakarta.servlet-api' //스프링부트 3.0 이상
+implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api' //스프링부트 3.0 이상
+implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl' //스프링부트 3.0 이상
 }
 
 tasks.named('test') {
