--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,13 @@ server.servlet.session.timeout=30m
 
 #Database config
 #spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-server.port=8282
+server.port=8383
 
 #spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/testdb?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
 spring.datasource.hikari.jdbc-url=jdbc:log4jdbc:mysql://192.168.0.45:3306/team_db?allowPublicKeyRetrieval=true&serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
-spring.datasource.hikari.username=abc3
+spring.datasource.hikari.username=abc1
 spring.datasource.hikari.password=123456789
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
 
@@ -20,4 +20,8 @@ spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+# JPA/Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
