--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,13 +5,17 @@ server.port=8082
 log4jdbc.drivers=com.mysql.cj.jdbc.Driver
 
 # JSP View Resolver
+spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.hikari.jdbc-url=jdbc:mysql://192.168.0.45:3306/team_db?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.hikari.username=abc3
+spring.datasource.hikari.password=123456789
+spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
+mybatis.configuration.map-underscore-to-camel-case=true
+
+
+# JSP
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
-# MySQL configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/team_db
-spring.datasource.username=abc1
-spring.datasource.password=123456789
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
