logging level 설정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,12 @@ server.port=8082
 # Log4jdbc settings
 log4jdbc.drivers=com.mysql.cj.jdbc.Driver
 
+#Set loging level
+logging.level.root=INFO
+logging.level.com.jjobkorea.controller=INFO
+
+
+
 # JSP View Resolver
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.jdbc-url=jdbc:mysql://192.168.0.45:3306/team_db?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
