--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ log4jdbc.drivers=com.mysql.cj.jdbc.Driver
 logging.level.root=INFO
 logging.level.com.jjobkorea.controller=INFO
 
-
+logging.level.org.springframework=DEBUG
+logging.level.com.jjobkorea=DEBUG
 
 # JSP View Resolver
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
