--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl' //스프링부트 3.
     implementation 'org.mapstruct:mapstruct:1.5.2.Final'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.2.Final'
 
+	implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.20' // 썸네일 임포트
+
 }
 
 tasks.named('test') {
