--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-# Server port
 server.port=8082
 
 # Log4jdbc settings
@@ -7,18 +6,20 @@ log4jdbc.drivers=com.mysql.cj.jdbc.Driver
 #Set loging level
 logging.level.root=INFO
 logging.level.com.jjobkorea.controller=INFO
-
 logging.level.org.springframework=DEBUG
 logging.level.com.jjobkorea=DEBUG
 
+#JPA가 기본적으로 camelCase를 snake_case로 변환하지 않게 설정.
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 # JSP View Resolver
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://192.168.0.45:3306/team_db?allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.hikari.jdbc-url=jdbc:mysql://192.168.0.45:3306/team_db?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
-spring.datasource.hikari.username=abc3
+spring.datasource.hikari.username=abc1
 spring.datasource.hikari.password=123456789
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
 mybatis.configuration.map-underscore-to-camel-case=true
-
 
 # JSP
 spring.mvc.view.prefix=/WEB-INF/views/
