채용정보 페이지 복구

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ logging.level.com.jjobkorea=DEBUG
 
 # JSP View Resolver
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.hikari.jdbc-url=jdbc:mysql://192.168.0.45:3306/team_db?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
-spring.datasource.hikari.username=abc3
-spring.datasource.hikari.password=123456789
+spring.datasource.hikari.jdbc-url=jdbc:mysql://localhost:3306/team_db?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
+spring.datasource.hikari.username=root
+spring.datasource.hikari.password=dbwls96
 spring.datasource.hikari.connection-test-query=SELECT NOW() FROM dual
 mybatis.configuration.map-underscore-to-camel-case=true
 
