--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 # Server port
 server.port=8082
 
-# Log4jdbc settings
-log4jdbc.drivers=com.mysql.cj.jdbc.Driver
 
 #Set loging level
 logging.level.root=INFO
@@ -28,3 +26,7 @@ spring.mvc.view.suffix=.jsp
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#entity camel change X
+
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
