--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 spring.datasource.hikari.jdbc-url=jdbc:mysql://192.168.0.45:3306/team_db?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
-spring.datasource.hikari.username=abc3
+spring.datasource.hikari.username=abc5
 spring.datasource.hikari.password=123456789
 
 
@@ -33,3 +33,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #entity camel change X
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+spring.servlet.multipart.location=D:\\dev\\upload\\
