--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,8 +31,12 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 #entity camel change X
-
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 #세션 소멸 시간 설정 (60분)
 server.servlet.session.timeout=60m
+
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=2MB
+spring.servlet.multipart.max-request-size=2MB
