APPLICATION.PROPERTIES 이력서 사진 저장 용량 추가 3줄

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 spring.datasource.hikari.jdbc-url=jdbc:mysql://192.168.0.45:3306/team_db?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8&useSSL=false
-spring.datasource.hikari.username=abc5
+spring.datasource.hikari.username=abc3
 spring.datasource.hikari.password=123456789
 
 
@@ -36,7 +36,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 #세션 소멸 시간 설정 (60분)
 server.servlet.session.timeout=60m
 
-
+#이력서 사진 용량
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
